# renovation_translation_pack

./: README.md  README_zh.md  base.py  mapping.py  pack.py  pyproject.toml
.github/workflows/: ruff.yml  update.yml
data/: mapping.json
data/1.10.2/: pack.mcmeta
data/1.11.2/: pack.mcmeta
data/1.12.2/: pack.mcmeta
data/1.13.2/: zh_cn.json
data/1.14.4/: pack.mcmeta
data/1.15.2/: lzh.json  pack.mcmeta  zh_hk.json
data/1.16.5/: pack.mcmeta  zh_cn.json  zh_tw.json
data/1.17.1/: pack.mcmeta  zh_hk.json  zh_tw.json
data/1.18.2/: en_us.json  lzh.json  pack.mcmeta
data/1.19.2/: en_us.json  lzh.json  pack.mcmeta  zh_hk.json
data/1.7.10/: pack.mcmeta
data/1.8.9/: pack.mcmeta
data/1.9.4/: pack.mcmeta
lang/1.13/: zh_cn.json  zh_tw.json
lang/1.13.2/: zh_tw.json
lang/1.14.4/: zh_cn.json  zh_tw.json
lang/1.15.2/: zh_cn.json  zh_tw.json
lang/1.16.5/: lzh.json  zh_hk.json
lang/1.17.1/: en_us.json  lzh.json  zh_cn.json
lang/1.18.2/: zh_cn.json  zh_hk.json  zh_tw.json
lang/1.19.2/: zh_cn.json  zh_tw.json
mc_lang/full/: ja_jp.json  ko_kr.json  lzh.json  vi_vn.json  zh_cn.json  zh_hk.json  zh_tw.json
mc_lang/valid/: en_us.json  ja_jp.json  ko_kr.json  lzh.json  vi_vn.json  zh_cn.json  zh_hk.json  zh_tw.json
output/1.10.2/: lzh.lang  zh_CN.lang  zh_HK.lang  zh_TW.lang
output/1.11.2/: lzh.lang  zh_cn.lang  zh_hk.lang  zh_tw.lang
output/1.12.2/: lzh.lang  zh_cn.lang  zh_hk.lang  zh_tw.lang
output/1.13/: zh_cn.json  zh_tw.json
output/1.13.2/: lzh.json  zh_cn.json  zh_hk.json  zh_tw.json
output/1.14.4/: lzh.json  zh_cn.json  zh_hk.json  (+1 more)
(+105 files in other folders)
