[project]
name = "renovation-translation-pack"
version = "1.0.0"
description = "A Python project for generating renovation language resource pack."
readme = "README.md"
authors = [{ name = "SkyEye_FAST", email = "skyeyefast@foxmail.com" }]
maintainers = [{ name = "SkyEye_FAST", email = "skyeyefast@foxmail.com" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncio>=3.4.3",
    "orjson>=3.10.18",
]

[project.urls]
Repository = "https://github.com/SkyEye_FAST/renovation-language-pack"
Issues = "https://github.com/SkyEye_FAST/renovation-language-pack/issues"
